zts server code cleanup - replace deprecated calls, etc (#2294)
* zts server code cleanup - replace deprecated calls, etc

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>

* zts server code cleanup - replace deprecated calls, etc

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>

* replace ETag deprecated toString with suggested change

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>

---------

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>
Co-authored-by: Henry Avetisyan <hga@yahooinc.com>